// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with one expense 1`] = `
<div>
  <h1>
    Showing 
    1
     expense
     totalling £
    1.23
  </h1>
</div>
`;

exports[`should correctly render expenses summary with one expense 2`] = `
<div>
  <h1>
    Showing 
    78
     expense
    s
     totalling £
    12.35
  </h1>
</div>
`;
